--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h3>Mega.py</h3>
           <div class="divider"></div>
           <p>Used to view multiple DNA alignments all within one Excel document. Features DNA to protein translation, handling of ambigious nucleotides and amino acids, and customizable colours and matching elements.</p>
-          <input class="btn-view" id="BtnMega" onclick="location.href='Programs/Mega/index.html';" type="button" value="View More" />
+          <input class="btn-view" id="BtnMega" onclick="location.href='programs/Mega/index.html';" type="button" value="View More" />
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
           <h3>Schedule A Creater.vba <small>(under construction)</small></h3>
           <div class="divider"></div>
           <p>A visual basic program for the efficient creation of Agreement of Leases. Able to organize large tables of clauses and easily allows for the addition of new ones. Is flexible enough to be used for the filling any other PDF's with built-in textboxes.</p>
-          <input class="btn-view" id="BtnScheduleA" onclick="location.href='Programs/ScheduleACreater/index.html';" type="button" value="View More" />
+          <input class="btn-view" id="BtnScheduleA" onclick="location.href='programs/ScheduleACreater/index.html';" type="button" value="View More" />
         </div>
         <div class="col-sm-4 picture">
           <a href="./img/ScheduleACreater.png"><img src="./img/ScheduleACreater.png" alt="Schedule A Creater"></a>
@@ -100,7 +100,7 @@
           <h3>Matrix.cpp <small>(under construction)</small></h3>
           <div class="divider"></div>
           <p>A C++ program which can row reduce any sized matrices. The four fundamental subspaces (null, row, column, and left null) are calculated efficiently by using a single Gauss-Jordan elimination. Deals with entries in a custom-made fraction class for perfect accuracy vs doubles plagues with limited decimal places. Still to be implemented: determinant, characteristic polynomials, eigenvalues, Gram-Schmidt Procedure, Jordan-Canonical form, triangular forms, and possibly create an interactive and intuitive webpage UI.</p>
-          <input class="btn-view" id="BtnMatrix" onclick="location.href='Programs/Matrix/index.html';" type="button" value="View More" />
+          <input class="btn-view" id="BtnMatrix" onclick="location.href='programs/Matrix/index.html';" type="button" value="View More" />
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
           <h3>Cron Tutorial</h3>
           <div class="divider"></div>
           <p>A brief introduction in setting up scheduled tasks on a Unix/Linux environment. Includes simple management of server load as well as emailing if problems arise.</p>
-          <input class="btn-view" id="BtnCron" onclick="location.href='Programs/Cron/index.html';" type="button" value="View More" />
+          <input class="btn-view" id="BtnCron" onclick="location.href='programs/Cron/index.html';" type="button" value="View More" />
         </div>
         <div class="col-sm-4 picture">
           <a href="./img/Cron.png"><img src="./img/Cron.png" alt="Cron"></a>
