--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/Programs/">Programs</a></li>
+          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
           <li><a href="Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -120,7 +120,7 @@
     </div>
     <!--See More Button-->
     <div class="btn-wrapper">
-      <input class="prog-style" id="SeeMore" onclick="location.href='./programs/index.html';" type="button" value="See More Programs" />
+      <input class="prog-style" id="SeeMore" onclick="location.href='https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs';" type="button" value="See More Programs" />
     </div>
   </article>
   <!--Footer-->
