--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/Programs/">Programs</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="./about.html">About</a></li>
+          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
+          <li><a href="Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </div>
