--- a/programs/Mega/index.html
+++ b/programs/Mega/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/Programs/">Programs</a></li>
+          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
           <li><a href="../../Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
           <li><a href="../../about.html">About</a></li>
         </ul>
@@ -137,7 +137,7 @@
         </ul>
       </div>
       <div class="button" id="all-programs">
-        <a href="#">All Programs</a>
+        <a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">All Programs</a>
       </div>
       <div class="round-button" id="top">
         <a href="#">Top</a>
