--- a/programs/ScheduleACreater/index.html
+++ b/programs/ScheduleACreater/index.html
@@ -90,7 +90,7 @@
                   <a href="ScheduleACreaterV1.0.tar.gz" title="Download ScheduleACreater.tar.gz" class="button"><span class="glyphicon glyphicon-compressed"></span> ScheduleACreater.tar.gz</a>
                 </td>
                 <td>
-                  <a href="#" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a>
+                  <a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs/ScheduleACreater" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a>
                 </td>
               </tr>
             </table>
@@ -99,7 +99,7 @@
           <div class="container-fluid" id="demonstration">
             <h3>Demonstration</h3>
             <div class="divider"></div>
-            <p>&emsp;&emsp;&emsp;As a son of a real estate agent, I was continually tasked with writing Schedule A's. I tried storing clauses within a Microsoft Word document but sifting through various categories was a hassle. With this now in hand, I've saved some <a href="#">empty template forms</a> to streamline the process. Firstly, open the document by pressing the Open button and navigating to a blank Agreement to Lease. If done correctly, the program will automatically navigate to the CLAUSES tab and the preset categories and clauses should pop up.</p>
+            <p>&emsp;&emsp;&emsp;As a son of a real estate agent, I was continually tasked with writing Schedule A's. I tried storing clauses within a Microsoft Word document but sifting through various categories was a hassle. With this now in hand, I've saved some <a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs/ScheduleACreater/Templates">empty template forms</a> to streamline the process. Firstly, open the document by pressing the Open button and navigating to a blank Agreement to Lease. If done correctly, the program will automatically navigate to the CLAUSES tab and the preset categories and clauses should pop up.</p>
             <table>
               <tr>
                 <th><a href="../../img/AddClause.png"><img src="../../img/AddClause.png" alt="Add Clause"></a></th>
