--- a/programs/Matrix/index.html
+++ b/programs/Matrix/index.html
@@ -91,7 +91,7 @@
                   <a href="MatrixV1.0.tar.gz" title="Download Matrix.tar.gz" class="button"><span class="glyphicon glyphicon-compressed"></span> Matrix.tar.gz</a>
                 </td>
                 <td>
-                  <a href="#" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a>
+                  <a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs/Matrix" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a>
                 </td>
               </tr>
             </table>
