--- a/programs/Mega/index.html
+++ b/programs/Mega/index.html
@@ -90,7 +90,7 @@
               <tr>
                 <td><a href="MegaV1.0.zip" title="Download Mega.zip" class="button"><span class="glyphicon glyphicon-compressed"></span> Mega.zip</a></td>
                 <td><a href="MegaV1.0.tar.gz" title="Download Mega.tar.gz" class="button"><span class="glyphicon glyphicon-compressed"></span> Mega.tar.gz</a></td>
-                <td><a href="#" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a></td>
+                <td><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs/Mega" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a></td>
               </tr>
             </table>
           </div>
@@ -114,7 +114,7 @@
             <p>&emsp;&emsp;&emsp;Finally, I used Mega.py to create 16 Excel files, each containing 10 different alignments. From this, I could easily see that the gap regions shared between all assemblers was due to poor capture efficiency of the enrichment probes used. More interestingly, I learned that STAMPY tended to follow the sequence of the reference genome during reconstruction, leading to numerous nonsensical ambiguities when viewing the protein alignments. Also noteworthy was that none of the assemblers were a clear winner in stitching together contiguous sequences as some would be able to recover areas which others would leave blank. Thus the use of all six (or more) in tandem could be used to create an effective consensus sequence, if one has the sheer computing power and free time (conveniently I have nothing better to do). Check out an example output file: <a href="Cemophora_RSO6ex4_19_LRAT_to_NEUR3.xlsx">Example.xlsx</a>.</p>
             <table>
               <tr>
-                <th><a href="#"><img src="../../img/MegaComparison.png" alt="Mega Comparison"></a></th>
+                <th><a href="../../img/MegaComparison.png"><img src="../../img/MegaComparison.png" alt="Mega Comparison"></a></th>
               </tr>
               <tr>
                 <td class="table-title">Protein sequence comparison</td>
