Added Electrophoresis.R, subtle fixes elsewhere

--- a/programs/Mega/index.html
+++ b/programs/Mega/index.html
@@ -82,7 +82,7 @@
               <li>A customizable colour palette for both DNA and protein alignments</li>
             </ul>
           </div>
-          <!--Download/Github-->
+          <!--Download/Github/Dependencies-->
           <div class="container-fluid" id="download">
             <h3>Download</h3>
             <div class="divider"></div>
@@ -93,6 +93,14 @@
                 <td><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs/Mega" title="View on GitHub" class="button"><span class="octicon octicon-git-branch"></span>View on GitHub</a></td>
               </tr>
             </table>
+          </div>
+          <div class="container-fluid" id="dependencies">
+            <h3>Dependencies</h3>
+            <div class="divider"></div>
+            <ul>
+              <li><a href="#">BioPython</a> - For bioinformatical work</li>
+              <li><a href="#">xlsxwriter</a> - Allows integration with Microsoft Excel</li>
+            </ul>
           </div>
           <!--Usage/Demonstration-->
           <div class="container-fluid" id="demonstration">
