Added program hub, updated main, extra design features

--- a/about.html
+++ b/about.html
@@ -31,40 +31,68 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
+          <li><a href="programs/index.html">Programs</a></li>
           <li><a href="Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <header class="about">
+  <header class="about bg-sublime">
     <div class="row">
       <div class="col-sm-8">
-        <h3>About Me</h3>
-        <div class="divider"></div>
-        <p>&emsp;&emsp;&emsp;Being a student for most of my life, I've always been interested in learning. Whether it may be from understanding the concepts of renal physiology to performing aldol condensation reactions or even TCP/IP protocol, I push myself to further my expertise in a wide variety of subject matter. After all, this encyclopedia-like nature has helped me quickly solve problems which otherwise would have been an absolute impossibility. My endeavours have been used in teaching fellow students, in real estate, and most recently in academia.</p>
-        <h3>Various Traits</h3>
-        <div class="divider"></div>
-        <ul>
-          <li>Currently attends the University of Toronto specializing in Biochemistry and Pharmacology.</li>
-          <li>Fluent in these languages: QBasic, Visual Basic, C, C++, Python, HTML, CSS, JavaScript.</li>
-          <li>Proficient in Linux/Unix-like machines; maintains the "ChangLab DNA-Cruncher 5000" server of the <a href="http://chang.eeb.utoronto.ca/">Chang Lab</a>.</li>
-          <li>Hobbies include: hiking, camping, kayaking, gemology.</li>
-        </ul>
-        <h3>Contact</h3>
-        <div class="divider"></div>
-        <p>&emsp;&emsp;&emsp;Feel free to email at any time. <a href="mailto:matthewpreston@rogers.com">matthewpreston@rogers.com</a></p>
+        <div class="container-fluid main-container bg-antisublime">
+          <h3>About Me</h3>
+          <div class="divider"></div>
+          <p>&emsp;&emsp;&emsp;Being a student for most of my life, I've always been interested in learning. Whether it may be from understanding the concepts of renal physiology to performing aldol condensation reactions or even TCP/IP protocol, I push myself to further my expertise in a wide variety of subject matter. After all, this encyclopedia-like nature has helped me quickly solve problems which otherwise would have been an absolute impossibility. My endeavours have been used in teaching fellow students, in real estate, and most recently in academia.</p>
+        </div>
+        <div class="container-fluid main-container bg-antisublime">
+          <h3>Various Traits</h3>
+          <div class="divider"></div>
+          <ul>
+            <li>Currently attends the University of Toronto majoring in Biochemistry and Pharmacology.</li>
+            <li>Fluent in these languages: QBasic, Visual Basic, C, C++, Python, HTML, CSS, JavaScript, R.</li>
+            <li>Proficient in Linux/Unix-like machines; maintains the "ChangLab DNA-Cruncher 5000" server of the <a href="http://chang.eeb.utoronto.ca/">Chang Lab</a>.</li>
+            <li>Hobbies include: hiking, camping, kayaking, gemology.</li>
+          </ul>
+        </div>
+        <div class="container-fluid main-container bg-antisublime">
+          <h3>Contact</h3>
+          <div class="divider"></div>
+          <p>&emsp;&emsp;&emsp;Feel free to email at any time. <a href="mailto:matthewpreston@rogers.com">matthewpreston@rogers.com</a></p>
+        </div>
+        <div class="container-fluid main-container bg-antisublime" id="inspirations">
+          <h3>People to Thank</h3>
+          <div class="divider"></div>
+          <ul>
+            <li><a href="http://kellyli.me/">Kelly Li</a> - For inspiring me to make a website in the first place</li>
+            <li><a href="http://www.w3schools.com/">w3schools</a> - For teaching me how to make a website (and neat tricks)</li>
+            <li><a href="http://wummel.github.io/">Wummel</a> - For getting me to think about <a href="https://github.com/">GitHub</a> as a website host</li>
+            <li><a href="http://www.danielecook.com/">Daniel E. Cook</a> - For being detailed in his bioinformatical work and demonstrations</li>
+            <!--<li><a href="https://milkydartsstudios.wordpress.com/">Mina Ly</a> - For getting me into art</li>-->
+          </ul>
+        </div>
         <!--Secret message shh...
         <p>&emsp;&emsp;&emsp;If you've found yourself here due to a certain "birthday message" click here for the API I've been working on.</p>
         <input something something make it work you fool />
         -->
       </div>
       <div class="col-sm-4">
-        <img src="./img/ChangLab.jpg" alt="Me">
+        <table class="container-fluid bg-antisublime">
+          <tr>
+            <th><img src="./img/ChangLab.jpg" alt="Me"></th>
+          </tr>
+          <tr>
+            <td><h5>Exhibit A: Me</h5></td>
+          </tr>
+        </table>
       </div>
     </div>
   </header>
+  <footer class="container-fluid">
+    <p>Updated on December 2016</p>
+    <p>Thanks to Friends &amp; Family | <a href="#inspirations">Insiprations</a></p>
+  </footer>
 
   <!--JQuery-->
   <script src="./js/jquery.min.js"></script>
