--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
+          <li><a href="programs/index.html">Programs</a></li>
           <li><a href="Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -118,15 +118,29 @@
         </div>
       </div>
     </div>
+    <!--Fifth container (Electrophoresis.R)-->
+    <div class="container-fluid main-container bg-r">
+      <div class="row">
+        <div class="col-sm-4 picture">
+          <a href="./img/Molecular Weight Interpolation SDS PAGE.png"><img src="./img/Molecular Weight Interpolation SDS PAGE.png" alt="Interpolated Gel"></a>
+        </div>
+        <div class="col-sm-8 text">
+          <h3>Electrophoresis.R</h3>
+          <div class="divider"></div>
+          <p>A R Script focused on quickly interpolating molecular weights of unknown bands based on a standard weight ladder.</p>
+          <input class="btn-view" id="BtnElectrophoresis" onclick="location.href='programs/Electrophoresis/index.html';" type="button" value="View More" />
+        </div>
+      </div>
+    </div>
     <!--See More Button-->
     <div class="btn-wrapper">
-      <input class="prog-style" id="SeeMore" onclick="location.href='https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs';" type="button" value="See More Programs" />
+      <input class="prog-style" id="SeeMore" onclick="location.href='programs/index.html';" type="button" value="See More Programs" />
     </div>
   </article>
   <!--Footer-->
   <footer class="container-fluid">
-    <p>Updated on August 2016</p>
-    <p>Thanks to <a href="http://kellyli.me/">Kelly Li</a> | <a href="http://wummel.github.io/">Wummel</a> | <a href="http://www.danielecook.com/">Daniel E. Cook</a> | <a href="http://www.w3schools.com/">w3schools</a></p>
+    <p>Updated on December 2016</p>
+    <p>Thanks to Friends &amp; Family | <a href="about.html#inspirations">Insiprations</a></p>
   </footer>
 
   <!--JQuery-->
