--- a/programs/Electrophoresis/index.html
+++ b/programs/Electrophoresis/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="collapse navbar-collapse" id="menuNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">Programs</a></li>
+          <li><a href="../index.html">Programs</a></li>
           <li><a href="../../Resume_Matthew_Preston.pdf" target="_blank">Resume</a></li>
           <li><a href="../../about.html">About</a></li>
         </ul>
@@ -124,7 +124,11 @@
     <!--Sidebar-->
     <aside class="col-sm-3">
       <div class="sidebar" id="spy-target">
-        <h3>Electrophoresis.R</h3>
+        <a href="#">
+          <div class="sidebar_title">
+            <h3>Electrophoresis.R</h3>
+          </div>
+        </a>
         <div class="divider"></div>
         <ul class="nav nav-list">
           <li><a href="#introduction">Introduction</a></li>
@@ -134,7 +138,7 @@
         </ul>
       </div>
       <div class="button" id="all-programs">
-        <a href="https://github.com/matthewpreston/matthewpreston.github.io/tree/master/programs">All Programs</a>
+        <a href="../index.html">All Programs</a>
       </div>
       <div class="round-button" id="top">
         <a href="#">Top</a>
@@ -144,8 +148,8 @@
 
   <!--Footer-->
   <footer class="container-fluid">
-    <p>Updated on August 2016</p>
-    <p>Thanks to <a href="http://kellyli.me/">Kelly Li</a> | <a href="http://wummel.github.io/">Wummel</a> | <a href="http://www.danielecook.com/">Daniel E. Cook</a> | <a href="http://www.w3schools.com/">w3schools</a></p>
+    <p>Updated on December 2016</p>
+    <p>Thanks to Friends &amp; Family | <a href="../../about.html#inspirations">Insiprations</a></p>
   </footer>
 
   <!--JQuery-->
