--- a/programs/Electrophoresis/index.html
+++ b/programs/Electrophoresis/index.html
@@ -68,10 +68,10 @@
             <h3>Features</h3>
             <div class="divider"></div>
             <ul>
-              <li>Simply structured input files for both the molecular ladder and unknown bands</li>
-              <li>Exponential regression of the molecular ladder for interpolation</li>
-              <li>Creation of a paper-presentable figure, with lanes clearly labelled with an appropriate legend</li>
-              <li>Pretty rainbow colour scheme</li>
+              <li>Simply structured input files for both the molecular ladder and unknown bands.</li>
+              <li>Exponential regression of the molecular ladder for interpolation.</li>
+              <li>Creation of a paper-presentable figure, with lanes clearly labelled with an appropriate legend.</li>
+              <li>Pretty rainbow colour scheme.</li>
             </ul>
           </div>
           <!--Download/Github/Dependencies-->
