--- a/programs/index.html
+++ b/programs/index.html
@@ -95,6 +95,7 @@
           <div class="divider"></div>
           <ul>
             <li><a href="./Cron/index.html">Cron Tutorial - For Time-Based Job-Scheduling</a></li>
+            <li><a href="./Make/index.html">Makefile Tutorial - For Repeated Compilation</a></li>
           </ul>
         </div>
       </div>
