Fixed spelling mistakes (#26)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="col-sm-8">
         <h3>Hello There.</h3>
         <div class="divider"></div>
-        <p>&emsp;&emsp;&emsp;My name is Matthew Preston. You've stumbled to my work of art (and work in progress) which is my website. Currently as a dental student at the University of Toronto, I used to specialize in biochemistry and pharmacology, but stil generalize in mathematics, chemistry, physics, and computer science. I'm always working to improve my skills in a wide array of subject matter, in hopes that they may be of use someday. What you see here on this website is everything cool that I've done in my time at university, and I hope to accomplish more in the years to come.</p>
+        <p>&emsp;&emsp;&emsp;My name is Matthew Preston. You've stumbled to my work of art (and work in progress) which is my website. Currently as a dental student at the University of Toronto, I used to specialize in biochemistry and pharmacology, but still generalize in mathematics, chemistry, physics, and computer science. I'm always working to improve my skills in a wide array of subject matter, in hopes that they may be of use someday. What you see here on this website is everything cool that I've done in my time at university, and I hope to accomplish more in the years to come.</p>
       </div>
       <div class="col-sm-4">
         <div class="photo">
