Fixed some OMP Lesion links

--- a/programs/OMP Lesions/index.html
+++ b/programs/OMP Lesions/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Matt's Very Crude OMP Lesion Picker Page!</h1>
-  <p>Designed before I was told that there was: <a href="https://vmicroscopy.dentistry.utoronto.ca/random-slides.php?class=oral">https://vmicroscopy.dentistry.utoronto.ca/random-slides.php?class=oral</a>.</p>
+  <p>Designed before I was told that there was: <a href="https://vmicroscopy.dentistry.utoronto.ca/random-slides.php?class=oral" target="_blank">https://vmicroscopy.dentistry.utoronto.ca/random-slides.php?class=oral</a>.</p>
   <p>But this page can also give you the answer if you don't know what you're even looking at!</p>
   <h2>Pick your favourite lesion!</h2>
   <input id="input" onchange="getSelectedID()" placeholder="Give an ID number">
